--- a/actions/validate-schema/action.yml
+++ b/actions/validate-schema/action.yml
@@ -2,14 +2,13 @@
 name: validate-schema
 description: "Recursively validate all JSON/YAML/YML files against schemas from schemastore.org"
 inputs:
+  schema:
+    description: "Schema name from schemastore.org (e.g. 'github-workflow')"
+    required: true
   directory:
     description: "Directory to validate (relative to workspace root)"
     required: false
     default: "."
-  schema:
-    description: "Schema name from schemastore.org (e.g. 'github-workflow') or full URL to schema. If not provided, auto-detects based on filename"
-    required: false
-    default: ""
   file-pattern:
     description: "Regex pattern to match files (e.g. '.*\\.yml$' for YAML files only). If not provided, matches all JSON/YAML/YML files"
     required: false
@@ -44,13 +43,8 @@ runs:
       run: |
         cd "${{ inputs.directory }}"
         
-        SCHEMA_INPUT="${{ inputs.schema }}"
-        
-        # Determine schema URL
-        if [ -n "$SCHEMA_INPUT" ]; then
-          SCHEMA_URL="https://json.schemastore.org/${SCHEMA_INPUT}.json"
-          echo "Using schema: $SCHEMA_INPUT ($SCHEMA_URL)"
-        fi
+        SCHEMA_URL="https://json.schemastore.org/${{ inputs.schema }}.json"
+        echo "Using schema: ${{ inputs.schema }} ($SCHEMA_URL)"
         
         # Find all JSON/YAML files
         FILES=$(find . -type f \( -name "*.json" -o -name "*.yml" -o -name "*.yaml" \) ! -path "*/node_modules/*" ! -name "package-lock.json")
@@ -74,59 +68,17 @@ runs:
         echo ""
         
         ERRORS=0
-        VALIDATED=0
-        SKIPPED=0
+        
+        # Download schema once
+        SCHEMA_FILE=$(mktemp)
+        if ! curl -sf "$SCHEMA_URL" -o "$SCHEMA_FILE"; then
+          echo "Failed to download schema from $SCHEMA_URL"
+          rm -f "$SCHEMA_FILE"
+          exit 1
+        fi
         
         # Validate each file
         while IFS= read -r file; do
-          FILENAME=$(basename "$file")
-          
-          # Determine schema URL for this file
-          if [ -z "$SCHEMA_INPUT" ]; then
-            # Auto-detect schema from catalog
-            if [ -z "$CATALOG" ]; then
-              echo "Fetching schema catalog from schemastore.org..."
-              CATALOG=$(curl -s https://www.schemastore.org/api/json/catalog.json)
-            fi
-            
-            FILE_SCHEMA_URL=$(echo "$CATALOG" | node -e "
-              const catalog = JSON.parse(require('fs').readFileSync(0, 'utf-8'));
-              const filename = process.argv[1];
-              
-              for (const schema of catalog.schemas) {
-                if (!schema.fileMatch) continue;
-                
-                for (const pattern of schema.fileMatch) {
-                  const regexPattern = pattern
-                    .replace(/\\\./g, '\\\\.')
-                    .replace(/\\*/g, '.*')
-                    .replace(/\\?/g, '.');
-                  const regex = new RegExp('^' + regexPattern + '$', 'i');
-                  
-                  if (regex.test(filename)) {
-                    console.log(schema.url);
-                    process.exit(0);
-                  }
-                }
-              }
-            " "$FILENAME" 2>/dev/null)
-            
-            if [ -z "$FILE_SCHEMA_URL" ]; then
-              echo "$file - No matching schema found"
-              SKIPPED=$((SKIPPED + 1))
-              continue
-            fi
-          else
-            # Use the specified schema for all files
-            FILE_SCHEMA_URL="$SCHEMA_URL"
-          fi
-          
-          VALIDATED=$((VALIDATED + 1))
-          
-          # Download and validate against schema
-          SCHEMA_FILE=$(mktemp)
-          curl -s "$FILE_SCHEMA_URL" -o "$SCHEMA_FILE"
-          
           if npx --prefix ${{ github.action_path }} ajv validate -s "$SCHEMA_FILE" -d "$file" --spec=draft2020 -c ajv-formats &>/dev/null; then
             echo "$file - Valid"
           else
@@ -134,9 +86,9 @@ runs:
             npx --prefix ${{ github.action_path }} ajv validate -s "$SCHEMA_FILE" -d "$file" --spec=draft2020 -c ajv-formats 2>&1 | grep -A 5 "error"
             ERRORS=$((ERRORS + 1))
           fi
-          
-          rm -f "$SCHEMA_FILE"
         done <<< "$FILES"
+        
+        rm -f "$SCHEMA_FILE"
         
         echo ""
         echo "=================================================="
