Update curl command in validate-schema action to follow redirects
- Modified the curl command to include the `-L` option, allowing it to follow redirects when downloading the schema file. This enhances the reliability of the schema retrieval process.

--- a/actions/validate-schema/action.yml
+++ b/actions/validate-schema/action.yml
@@ -71,7 +71,7 @@ runs:
         
         # Download schema once
         SCHEMA_FILE=$(mktemp)
-        if ! curl -sf "$SCHEMA_URL" -o "$SCHEMA_FILE"; then
+        if ! curl -sfL "$SCHEMA_URL" -o "$SCHEMA_FILE"; then
           echo "Failed to download schema from $SCHEMA_URL"
           rm -f "$SCHEMA_FILE"
           exit 1
