--- a/actions/validate-schema/package.json
+++ b/actions/validate-schema/package.json
@@ -4,7 +4,8 @@
   "description": "Validate JSON/YAML files against schemastore.org schemas",
   "dependencies": {
     "ajv-cli": "^5.0.0",
-    "ajv-formats": "^3.0.1"
+    "ajv-formats": "^3.0.1",
+    "js-yaml": "^4.1.0"
   }
 }
 
