--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,8 +1,8 @@
 ---
-name: CI
+name: PR
 
 on:
-  push:
+  pull_request:
     branches:
       - main
 
@@ -33,22 +33,3 @@ jobs:
           working-directory: actions
           schema: github-action
           file-pattern: 'action\.ya?ml$'
-
-  release:
-    name: Semantic Release
-    runs-on: ubuntu-latest
-    needs: [validate-workflows, validate-actions]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Semantic Release
-        id: release
-        uses: ./actions/semantic-release
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          should-create-release: 'true'
-
-      - name: Release Version
-        if: steps.release.outputs.version != ''
-        run: echo "Released version ${{ steps.release.outputs.version }}"
