feat: Enhance semantic release configuration and CI workflow
- Updated CI workflow to include permissions for writing to contents, pull requests, and issues, improving the release process.
- Added @semantic-release/release-notes-generator dependency to generate release notes based on commit messages, enhancing release documentation.
- Configured release notes generator with Angular preset for better formatting and sorting of commits.

--- a/actions/semantic-release/.releaserc.json
+++ b/actions/semantic-release/.releaserc.json
@@ -37,6 +37,18 @@
         }
       }
     ],
+    [
+      "@semantic-release/release-notes-generator",
+      {
+        "preset": "angular",
+        "parserOpts": {
+          "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES"]
+        },
+        "writerOpts": {
+          "commitsSort": ["subject", "scope"]
+        }
+      }
+    ],
     "@semantic-release/github",
     "@semantic-release/git"
   ]
