--- a/actions/semantic-release/package.json
+++ b/actions/semantic-release/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.1",
     "semantic-release": "^24.2.7",
     "semantic-release-unsquash": "github:romap0/semantic-release-unsquash#master"
   }
